# git-insights

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/actions/version-check/: action.yml
.github/scripts/: add_rc_version.py  bump_version.py  commit_emails_check.py  version_check.py
.github/workflows/: bump-version.yml  ci-build-wheels.yml  ci-develop.yml  ci-test.yml  ci-tests-main.yml  publish-crates-io.yml  publish-pypi.yml  publish-test-pypi.yml  rust-test.yml  rust-tests-main.yml
git_insights/: __main__.py
src/: cli.rs  code_frequency.rs  git.rs  lib.rs  main.rs  output.rs  py.rs  stats.rs  test_repo.rs  test_sync.rs  visualize.rs
tests/python/: test_cli.py
tests_py/: test_basic.py
