[package]
name = "git-insights"
version = "0.0.6"
edition = "2021"
description = "A CLI tool to generate Git repo stats and insights."
license = "MIT"
repository = "https://github.com/Magnus167/git-insights"
readme = "README.md"
keywords = ["git", "cli", "insights", "stats", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
regex = "1.11.2"


[[bin]]
name = "git-insights"
path = "src/main.rs"
