[package]
name = "git-insights"
version = "0.0.5-rc.2"
edition = "2021"
description = "A CLI tool to generate Git repo stats and insights."
license = "MIT"
repository = "https://github.com/Magnus167/git-insights"
readme = "README.md"
keywords = ["git", "cli", "insights", "stats", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
regex = "1.11.2"
pyo3 = { version = "0.22.2", features = ["abi3-py38", "extension-module"], optional = true }


[features]
default = []
python = ["pyo3"]

[lib]
name = "git_insights"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "git-insights"
path = "src/main.rs"
